fix(dialogs): content overflow. Refs #534 (#542)
* fix(dialogs): content overflow. Refs #534

* chore(dialogs): add comment

--- a/packages/application-components/src/components/dialogs/internals/dialog-styles.mod.css
+++ b/packages/application-components/src/components/dialogs/internals/dialog-styles.mod.css
@@ -119,6 +119,8 @@
 .dialog-content {
   border-top: 1px solid var(--border-color-separator);
   padding: var(--spacing-16) 0 var(--spacing-8);
-  overflow: visible;
   flex: 1;
+
+  /* The overflow should be `auto`, to make the container scrollable */
+  overflow: auto;
 }
